Fix vertical alignment of circle button v2, prevent strings from breaking line

--- a/styles/ag-grid.less
+++ b/styles/ag-grid.less
@@ -106,8 +106,10 @@
 			width: 0!important;
 		}
 	}
-	&-body-viewport-wrapper {
-		margin-right: 0!important;	
+	&-body-viewport {
+		&-wrapper {
+			margin-right: 0!important;	
+		}
 	}
 }
 .table-view-row-number-cell {
