--- a/styles/table-view-cell.less
+++ b/styles/table-view-cell.less
@@ -37,6 +37,9 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    .element-value-is-string {
+        white-space: nowrap;
+    }
   }
 
   &-is-empty {
@@ -59,6 +62,10 @@
     margin: 2px 1px;
     padding-left: 5px;
     overflow-y: hidden;
+
+    .table-view-circle-button {
+      margin-top: 2px;
+    }
 
     .editable-element {
       min-height: 24px;
